[metadata]
name = lanplaypy
version = attr: lanplaypy.VERSION
author = Kilian Douarinou
author_email = kilian.douarinou41@gmail.com
url = https://github.com/LeGeRyChEeSe/lanplaypy
description = LAN-PLAY API Python
long_description = file: README.md, CHANGELOG, LICENSE
long_description_content_type = text/markdown
keywords = LAN-PLAY API Python GraphQL
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable

    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

    License :: OSI Approved :: MIT License

    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.9
install_requires =
    gql[aiohttp]
    requests

[options.packages.find]
where = src
exclude =
    *.python-version
    *__pycache__
    tests